tests/errors/test_33.x
// Wrong type for element in array initializer

let x: i64[] = ['a', true, 19];

fn main() -> void {}